# python-d1-synth

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: acceptance_criteria.md  amp_envelope_adsr_parameters_v0.1.0.md  chatGPT_chatlog.md  duplicate_midi_event_guard_v0.1.0.md  envelope_release_soft_note_off_v0.1.0.md  external_midi_audio_trigger_v0.1.0.md  live_midi_input_receive_loop_v0.1.0.md  live_streaming_midi_playback_loop_v0.1.0.md  logic_external_midi_workflow_v0.1.0.md  logic_midi_region_multi_note_playback_v0.1.0.md  midi_device_discovery_default_selection_v0.1.0.md  midi_learning_path_v0.1.0.md  midi_modulation_cc1_mapping_dsp_v0.1.0.md  midi_performance_patch_yaml_config_v0.1.0.md  midi_pitch_bend_mapping_dsp_v0.1.0.md  midi_to_note_event_mapping_v0.1.0.md  mvp_retrospective_v0.1.0.md  mvp_scope.md  mvp_sprint_review_v0.1.0.md  note_off_gated_voice_duration_v0.1.0.md  performance_mode_until_interrupt_v0.1.0.md  polyphonic_voice_mixer_triads_v0.1.0.md  sprint_1_epic_003_review_v0.1.0.md  sprint_1_session_v0.1.0.md  sprint_lessons_learned_review_v0.1.0.md  studio_midi_routing_integration_v0.1.0.md  sustain_pedal_cc64_v0.1.0.md  sustained_note_audio_engine_v0.1.0.md  usb_midi_hardware_input_v0.1.0.md  user_stories.md  virtual_midi_audio_trigger_v0.1.0.md  virtual_midi_input_v0.1.0.md  virtual_midi_port_logic_daw_v0.1.0.md
examples/: midi_performance_patch.yaml  patch.yaml
tests/: test_audio.py  test_cli.py  test_config.py  test_debug.py  test_docs.py  test_engine.py  test_hardware_midi.py  test_midi.py  test_notes.py  test_oscillators.py  (+1 more)
(+14 files in other folders)
